Fixed: manuscript select box is legible in Firefox now
-Normalized manuscript select drop down font

-Changed "default St. Gall" to "default MEI"

--- a/editor/divaEditor.css
+++ b/editor/divaEditor.css
@@ -16,6 +16,10 @@ body{
 	vertical-align: middle;
 	padding-top:200px;
 }
+#manuscriptSelect{
+	color:#000;
+	font-size:12pt;
+}
 #manuscriptSubmit{
 	margin-top:20px;
 	background-color:#222;
